--- a/reports/cost_in_dollars.xml
+++ b/reports/cost_in_dollars.xml
@@ -37,8 +37,8 @@
                                     <td><span t-field="line.landed_cost_quantity"/></td>
                                     <td><span t-field="line.landed_cost_date"/></td>
                                     <td><span t-field="line.landed_cost_former_cost"/></td>
-                                    <td t-foreach="line.apportionments" t-as="apportionment">
-                                        <span t-field="apportionment.name"/>
+                                    <td t-foreach="line.valuation_adjustment_lines" t-as="apportionment">
+                                        <span t-field="apportionment.additional_landed_cost"/>
                                     </td>
                                     <td><span t-field="line.inverse_currency_rate"/></td>
                                     <td><span t-field="line.total_cost"/></td>
