[IMP] tree view

--- a/reports/cost_in_dollars.xml
+++ b/reports/cost_in_dollars.xml
@@ -5,7 +5,7 @@
         model="cost.in.dollars.report"
         string="Cost in dollars report"
         name="cost_in_dollars_report.cost_in_dollars_report_view"
-        file="cost_in_dollars_report.cost_in_dollars_report"
+        file="cost_in_dollars_report_file"
         report_type="qweb-pdf"/>
 
     <template id="cost_in_dollars_report_view">
@@ -37,8 +37,11 @@
                                     <td><span t-field="line.landed_cost_quantity"/></td>
                                     <td><span t-field="line.landed_cost_date"/></td>
                                     <td><span t-field="line.landed_cost_former_cost"/></td>
-                                    <td t-foreach="line.valuation_adjustment_lines" t-as="apportionment">
-                                        <span t-field="apportionment.additional_landed_cost"/>
+                                    <!-- <td t-foreach="line.valuation_adjustment_lines" t-as="apportionment">
+                                        <span t-field="apportionment.cost_line_id.cost_id.name"/>
+                                    </td> -->
+                                    <td t-foreach="line.report.apportionments" t-as="apportionment">
+                                        <span>TODO</span>
                                     </td>
                                     <td><span t-field="line.inverse_currency_rate"/></td>
                                     <td><span t-field="line.total_cost"/></td>
